# cabal-dependencies

./: .gitignore  LICENSE  README.md  cabal-dependencies.cabal  cabal.project.local  depdep.pl  module_dependencies.ods  stack.yaml
app/: Main.hs
src/: CabalDependencies.hs
