name:           cabal-dependencies
version:        0.1.0.0
description:    extract dependencies from Cabal files
homepage:       https://github.com/codiepp/cabal-dependencies#readme
bug-reports:    https://github.com/codiepp/cabal-dependencies/issues
author:         Alexander Diemand
maintainer:     codieplusplus@apax.net
copyright:      2018 Alexander Diemand
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/codiepp/cabal-dependencies

library
  exposed-modules:
      CabalDependencies
  other-modules:
      Paths_cabal_dependencies
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , Cabal
    , text
  default-language: Haskell2010

executable cabal-dependencies-exe
  main-is: Main.hs
  other-modules:
      Paths_cabal_dependencies
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cabal-dependencies
  default-language: Haskell2010

test-suite cabal-dependencies-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_cabal_dependencies
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cabal-dependencies
  default-language: Haskell2010
